templates/vpc-networking.yaml
Resources:
  myVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: 'true'
      EnableDnsHostnames: 'true'
      Tags:
       - Key: env
         Value: dev
       - Key: author
         Value: Kostas Makedos
  public01a:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref myVPC
      CidrBlock: 10.0.0.0/24
      AvailabilityZone: "eu-central-1a"
      Tags:
      - Key: env
        Value: dev
      - Key: author
        Value: Kostas Makedos
  public01b:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref myVPC
      CidrBlock: 10.0.1.0/24
      AvailabilityZone: "eu-central-1b"
      Tags:
      - Key: env
        Value: dev
      - Key: author
        Value: Kostas Makedos
  public01c:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref myVPC
      CidrBlock: 10.0.2.0/24
      AvailabilityZone: "eu-central-1c"
      Tags:
      - Key: env
        Value: dev
      - Key: author
        Value: Kostas Makedos
  myInternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
      - Key: env
        Value: dev
      - Key: author
        Value: Kostas Makedos

  IGWAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: myVPC
      InternetGatewayId:
        Ref: myInternetGateway
  myRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:  
        Ref: myVPC
      Tags:
      - Key: env
        Value: dev
      - Key: author
        Value: Kostas Makedos
  IgwRtbAssoc:
    Type: AWS::EC2::GatewayRouteTableAssociation
    Properties:
      GatewayId: myInternetGateway
      RouteTableId: myRouteTable
  DefaultPublicRoute:
    Type: AWS::EC2::Route
    DependsOn: IGWAttachment
    Properties:
      RouteTableId:
        Ref: myRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: myInternetGateway
  myRoute:
    Type: AWS::EC2::Route
    DependsOn: myInternetGateway
    Properties:
       RouteTableId:
         Ref: myRouteTable
       DestinationCidrBlock: 0.0.0.0/0
       GatewayId:
         Ref: myInternetGateway
  public01aRTBAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: public01a
      RouteTableId:
        Ref: myRouteTable
  public01bRTBAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: public01b
      RouteTableId:
        Ref: myRouteTable
  public01cRTBAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: public01c
      RouteTableId:
        Ref: myRouteTable
